[gd_scene load_steps=2 format=3 uid="uid://d2i41155lbvwo"]

[ext_resource type="Script" path="res://utils/profile_list/profile_list.gd" id="1_fcnk0"]

[node name="profile_list" type="Window"]
initial_position = 2
size = Vector2i(400, 200)
wrap_controls = true
script = ExtResource("1_fcnk0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Profiles" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
collapsed = true
dragger_visibility = 2

[node name="Profile_List" type="ItemList" parent="VBoxContainer/Profiles"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
auto_height = true

[node name="Profile_Info" type="Label" parent="VBoxContainer/Profiles"]
layout_mode = 2
text = "NAME: Acelo
PLAY_TIME: 3 days 04:23:05.23
GAMES:
 - 0 EASY
 - 1 HARD"
horizontal_alignment = 1
vertical_alignment = 1

[node name="crsede" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Create" type="Button" parent="VBoxContainer/crsede"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../Profiles/Profile_List")
text = "CREATE"

[node name="Select" type="Button" parent="VBoxContainer/crsede"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../Profiles/Profile_List")
disabled = true
text = "SELECT"

[node name="Delete" type="Button" parent="VBoxContainer/crsede"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_top = NodePath("../../Profiles/Profile_List")
disabled = true
text = "DELETE"
